# slipstream

./: .aws_setup_test.sh  .env.gradient.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DATA_SAFETY.md  FEDERATED_VISION.md  GO_LIVE_TODAY_CHECKLIST.md  GRADIENT_LIVE_IMPLEMENTATION_PLAN.md  LIVE_TRADING_SETUP.md  NEXT_STEPS.md  README.md  README.md.bak  S3_SETUP_README.md  SETUP_COMPLETE.md  WALLET_CONFIGURATION.md  brawler.service  brawler_alphas.md  debug_hl_ws.py  debug_wallet_selection.py  docker-compose.yml  fetch_meta.py  hl_book_test.json  investigate_l1.py  measure_edge.py  prod_brawler.yaml  pyproject.toml  realtime_feed.py  run_volume_50k.py  spectrum_spec.md  spectrum_sprints.md  test_config_wallet.py  test_full_workflow.py  test_gradient_wallet.py  test_root_cause.py  test_subaccount_relationship.py  test_trade_and_read.py  test_volume_generator_integration.py
config/: brawler_eth.yaml  brawler_headless.yaml  brawler_prod.yaml  brawler_shitcoins.yaml  brawler_single_asset.example.yml  brawler_sol_test.yaml  brawler_wif_test.yaml  gradient_live.json  mktdata.toml  screener_candidates.yaml  volume_generator.example.yml
docs/: ALPHA_MODEL_TRAINING.md  BRAWLER_SPEC.md  BRAWLER_SPRINT_PLAN.md  CANDLE_ALIGNMENT.md  DOCUMENTATION.md  FEDERATION_MIGRATION_PLAN.md  FEDERATION_SUMMARY.md  FEDERATION_TDD_SPRINT_PLAN.md  GRADIENT.md  GRADIENT_DEPLOYMENT.md  GRADIENT_PLAN.md  MULTIFACTOR_IMPLEMENTATION_SUMMARY.md  MULTIFACTOR_RESULTS.md  MULTI_FACTOR_PCA.md  NOTIFICATION_SETUP.md  OPERATIONS.md  QUICKSTART_VOLUME_PCA.md  S3_HISTORICAL_DATA.md  TIMESCALE_MATCHING.md  brawler_performance_analytics_onboarding.md  brawler_performance_analytics_tdd_sprints.md  optimal_quoting.md  sprints_optimal_quoting.md  strategy_spec.md  volume_weighted_pca_implementation.md  volume_weighted_pca_research.md
notebooks/: gradient_analysis.ipynb  momentum_panel_test.ipynb
scripts/: backfill_signal_tracking.py  build_cost_model.py  build_pca_factor.py  check_analytics_connection.py  check_brawler_orders.py  check_positions.py  check_request_balance.py  data_load.py  debug_backtest.py  deploy_brawler.sh  download_l2_sample.py  emergency_close.py  get_eth_price.py  (+30 more)
src-rs/mktdata-daemon/: Cargo.toml  README.md
src-rs/mktdata-daemon/src/: config.rs  ipc.rs  main.rs  storage.rs  types.rs
src-rs/mktdata-daemon/src/venues/: hyperliquid.rs  mod.rs
(+263 files in other folders)
