[project]
name = "slipstream"
version = "0.1.0"
description = "Trading and research framework for Hyperliquid perpetual futures."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "hyperliquid-python-sdk>=0.20.0",
    "eth-account>=0.13",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.3",
    "websockets>=12.0",
    "python-telegram-bot>=21.0",
    "redis>=5.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
    "ipykernel>=6.29",
]
notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.11",
    "pyarrow>=15.0",
]

[project.scripts]
hl-load = "slipstream.__main__:main"
gradient-signals = "slipstream.strategies.gradient.cli:compute_signals_cli"
gradient-backtest = "slipstream.strategies.gradient.cli:run_backtest_cli"
volume-generator = "slipstream.strategies.volume_generator.cli:run_volume_generator_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/slipstream"]

[tool.hatch.build.targets.sdist]
include = [
    "src/slipstream",
    "README.md",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
