[package]
name = "mktdata-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack

# Concurrent data structures
dashmap = "6.0"
crossbeam-channel = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
toml = "0.8"

# HTTP client (for initial snapshots if needed)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Systemd integration (optional, Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
libsystemd = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
